manifests/hello-world/hello-ingress-blue.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: hello.ako.rtbsystems.com
    http:
      paths:
      -  backend:
           serviceName: helloworld-v1-10
           servicePort: 80
